[package]
name = "extrahop"
version = "0.2.7"
authors = ["Ted Driggs <t.driggs@outlook.com>"]
repository = "https://github.com/TedDriggs/extrahop"
documentation = "https://docs.rs/extrahop/0.2.7"
license = "MIT"
description = "Client library for the ExtraHop platform."
keywords = ["extrahop"]
readme = "README.md"
categories = ["api-bindings"]

[badges]
travis-ci = { repository = "TedDriggs/extrahop" }

[dependencies]
derive_builder = "0.5.1"
lazy_static = "0.2.9"
regex = "0.2.2"
reqwest = "0.8.6"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.19"

[dependencies.error-chain]
version = "0.11.0"
# Suppress backtraces due to perf concerns
default-features = false

[dependencies.petgraph]
version = "0.4.10"
optional = true

[features]
default = ["petgraph"]