[package]
name = "extrahop"
version = "0.3.0"
authors = ["Ted Driggs <t.driggs@outlook.com>"]
repository = "https://github.com/TedDriggs/extrahop"
documentation = "https://docs.rs/extrahop/0.3.0"
license = "MIT"
description = "Client library for the ExtraHop platform."
keywords = ["extrahop"]
readme = "README.md"
categories = ["api-bindings"]
edition = "2018"

[badges]
travis-ci = { repository = "TedDriggs/extrahop" }

[dependencies]
async-trait = "0.1.22"
derive_builder = { version = "0.8.0", optional = true }
lazy_static = "1.4.0"
petgraph = { version = "0.4.10", optional = true }
reqwest = { version = "0.10.0", features = ["json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
thiserror = "1.0.9"
url = "2.1.1"

[features]
default = ["petgraph", "topology"]

native-tls = ["reqwest/native-tls"]

# Feature-gate common client use-cases to minimize build size
sharing = []
topology = ["derive_builder"]

[dev-dependencies]
# Dependencies used in the examples
anyhow = "1.0.13"
structopt = "0.3.3"
tokio = { version = "0.2.0", features = ["full"] }