[package]
name = "extrahop"
version = "0.3.0-alpha.1"
authors = ["Ted Driggs <t.driggs@outlook.com>"]
repository = "https://github.com/TedDriggs/extrahop"
documentation = "https://docs.rs/extrahop/0.3.0-alpha.1"
license = "MIT"
description = "Client library for the ExtraHop platform."
keywords = ["extrahop"]
readme = "README.md"
categories = ["api-bindings"]
edition = "2018"

[badges]
travis-ci = { repository = "TedDriggs/extrahop" }

[dependencies]
async-trait = "0.1.22"
reqwest = { version = "0.10.0", features = ["json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
thiserror = "1.0.9"
url = "2.1.1"

derive_builder = { version = "0.8.0", optional = true }
petgraph = { version = "0.4.10", optional = true }

[features]
native-tls = ["reqwest/native-tls"]

topology = ["derive_builder"]

[dev-dependencies]
# Dependencies used in the examples
anyhow = "1.0.13"
structopt = "0.3.3"
tokio = { version = "0.2.0", features = ["full"] }